pkg/parser/jspnl_parser.go
// Code generated from JSPNL.g4 by ANTLR 4.7.2. DO NOT EDIT.

package parser // JSPNL

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'place'", "'trans'", "'arc'", "'iarc'", "'oarc'", "'harc'", "'to'",
	"'reward'", "'('", "')'", "','", "'='", "'{'", "'}'", "'!'", "'+'", "'-'",
	"'*'", "'/'", "'div'", "'mod'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='",
	"'&&'", "'||'", "'ifelse'", "'#'", "'?'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "LOGICAL",
	"ID", "INT", "FLOAT", "STRING", "NEWLINE", "WS", "LINE_COMMENT", "BLOCK_COMMENT",
}

var ruleNames = []string{
	"prog", "statement", "declaration", "node_declaration", "arc_declaration",
	"reward_declaration", "node_options", "option_list", "option_value", "label_expression",
	"update_block", "simple_block", "simple", "assign_expression", "expression",
	"function_expression", "function_args", "args_list", "args_value", "ntoken_expression",
	"enable_expression", "literal_expression",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type JSPNLParser struct {
	*antlr.BaseParser
}

func NewJSPNLParser(input antlr.TokenStream) *JSPNLParser {
	this := new(JSPNLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "JSPNL.g4"

	return this
}

// JSPNLParser tokens.
const (
	JSPNLParserEOF           = antlr.TokenEOF
	JSPNLParserT__0          = 1
	JSPNLParserT__1          = 2
	JSPNLParserT__2          = 3
	JSPNLParserT__3          = 4
	JSPNLParserT__4          = 5
	JSPNLParserT__5          = 6
	JSPNLParserT__6          = 7
	JSPNLParserT__7          = 8
	JSPNLParserT__8          = 9
	JSPNLParserT__9          = 10
	JSPNLParserT__10         = 11
	JSPNLParserT__11         = 12
	JSPNLParserT__12         = 13
	JSPNLParserT__13         = 14
	JSPNLParserT__14         = 15
	JSPNLParserT__15         = 16
	JSPNLParserT__16         = 17
	JSPNLParserT__17         = 18
	JSPNLParserT__18         = 19
	JSPNLParserT__19         = 20
	JSPNLParserT__20         = 21
	JSPNLParserT__21         = 22
	JSPNLParserT__22         = 23
	JSPNLParserT__23         = 24
	JSPNLParserT__24         = 25
	JSPNLParserT__25         = 26
	JSPNLParserT__26         = 27
	JSPNLParserT__27         = 28
	JSPNLParserT__28         = 29
	JSPNLParserT__29         = 30
	JSPNLParserT__30         = 31
	JSPNLParserT__31         = 32
	JSPNLParserLOGICAL       = 33
	JSPNLParserID            = 34
	JSPNLParserINT           = 35
	JSPNLParserFLOAT         = 36
	JSPNLParserSTRING        = 37
	JSPNLParserNEWLINE       = 38
	JSPNLParserWS            = 39
	JSPNLParserLINE_COMMENT  = 40
	JSPNLParserBLOCK_COMMENT = 41
)

// JSPNLParser rules.
const (
	JSPNLParserRULE_prog                = 0
	JSPNLParserRULE_statement           = 1
	JSPNLParserRULE_declaration         = 2
	JSPNLParserRULE_node_declaration    = 3
	JSPNLParserRULE_arc_declaration     = 4
	JSPNLParserRULE_reward_declaration  = 5
	JSPNLParserRULE_node_options        = 6
	JSPNLParserRULE_option_list         = 7
	JSPNLParserRULE_option_value        = 8
	JSPNLParserRULE_label_expression    = 9
	JSPNLParserRULE_update_block        = 10
	JSPNLParserRULE_simple_block        = 11
	JSPNLParserRULE_simple              = 12
	JSPNLParserRULE_assign_expression   = 13
	JSPNLParserRULE_expression          = 14
	JSPNLParserRULE_function_expression = 15
	JSPNLParserRULE_function_args       = 16
	JSPNLParserRULE_args_list           = 17
	JSPNLParserRULE_args_value          = 18
	JSPNLParserRULE_ntoken_expression   = 19
	JSPNLParserRULE_enable_expression   = 20
	JSPNLParserRULE_literal_expression  = 21
)

// IProgContext is an interface to support dynamic dispatch.
type IProgContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgContext differentiates from other interfaces.
	IsProgContext()
}

type ProgContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgContext() *ProgContext {
	var p = new(ProgContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSPNLParserRULE_prog
	return p
}

func (*ProgContext) IsProgContext() {}

func NewProgContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgContext {
	var p = new(ProgContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSPNLParserRULE_prog

	return p
}

func (s *ProgContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(JSPNLParserNEWLINE)
}

func (s *ProgContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(JSPNLParserNEWLINE, i)
}

func (s *ProgContext) AllStatement() []IStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementContext)(nil)).Elem())
	var tst = make([]IStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementContext)
		}
	}

	return tst
}

func (s *ProgContext) Statement(i int) IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ProgContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JSPNLListener); ok {
		listenerT.EnterProg(s)
	}
}

func (s *ProgContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JSPNLListener); ok {
		listenerT.ExitProg(s)
	}
}

func (p *JSPNLParser) Prog() (localctx IProgContext) {
	localctx = NewProgContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, JSPNLParserRULE_prog)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(50)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<JSPNLParserT__0)|(1<<JSPNLParserT__1)|(1<<JSPNLParserT__2)|(1<<JSPNLParserT__3)|(1<<JSPNLParserT__4)|(1<<JSPNLParserT__5)|(1<<JSPNLParserT__7)|(1<<JSPNLParserT__8)|(1<<JSPNLParserT__14)|(1<<JSPNLParserT__15)|(1<<JSPNLParserT__16)|(1<<JSPNLParserT__29)|(1<<JSPNLParserT__30))) != 0) || (((_la-32)&-(0x1f+1)) == 0 && ((1<<uint((_la-32)))&((1<<(JSPNLParserT__31-32))|(1<<(JSPNLParserLOGICAL-32))|(1<<(JSPNLParserID-32))|(1<<(JSPNLParserINT-32))|(1<<(JSPNLParserFLOAT-32))|(1<<(JSPNLParserSTRING-32))|(1<<(JSPNLParserNEWLINE-32)))) != 0) {
		p.SetState(45)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<JSPNLParserT__0)|(1<<JSPNLParserT__1)|(1<<JSPNLParserT__2)|(1<<JSPNLParserT__3)|(1<<JSPNLParserT__4)|(1<<JSPNLParserT__5)|(1<<JSPNLParserT__7)|(1<<JSPNLParserT__8)|(1<<JSPNLParserT__14)|(1<<JSPNLParserT__15)|(1<<JSPNLParserT__16)|(1<<JSPNLParserT__29)|(1<<JSPNLParserT__30))) != 0) || (((_la-32)&-(0x1f+1)) == 0 && ((1<<uint((_la-32)))&((1<<(JSPNLParserT__31-32))|(1<<(JSPNLParserLOGICAL-32))|(1<<(JSPNLParserID-32))|(1<<(JSPNLParserINT-32))|(1<<(JSPNLParserFLOAT-32))|(1<<(JSPNLParserSTRING-32)))) != 0) {
			{
				p.SetState(44)
				p.Statement()
			}

		}
		{
			p.SetState(47)
			p.Match(JSPNLParserNEWLINE)
		}

		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSPNLParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSPNLParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Declaration() IDeclarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *StatementContext) Simple() ISimpleContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISimpleContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISimpleContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JSPNLListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JSPNLListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *JSPNLParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, JSPNLParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(55)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(53)
			p.Declaration()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(54)
			p.Simple()
		}

	}

	return localctx
}

// IDeclarationContext is an interface to support dynamic dispatch.
type IDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclarationContext differentiates from other interfaces.
	IsDeclarationContext()
}

type DeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationContext() *DeclarationContext {
	var p = new(DeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSPNLParserRULE_declaration
	return p
}

func (*DeclarationContext) IsDeclarationContext() {}

func NewDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationContext {
	var p = new(DeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSPNLParserRULE_declaration

	return p
}

func (s *DeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationContext) Node_declaration() INode_declarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INode_declarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INode_declarationContext)
}

func (s *DeclarationContext) Arc_declaration() IArc_declarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IArc_declarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IArc_declarationContext)
}

func (s *DeclarationContext) Reward_declaration() IReward_declarationContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IReward_declarationContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IReward_declarationContext)
}

func (s *DeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JSPNLListener); ok {
		listenerT.EnterDeclaration(s)
	}
}

func (s *DeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JSPNLListener); ok {
		listenerT.ExitDeclaration(s)
	}
}

func (p *JSPNLParser) Declaration() (localctx IDeclarationContext) {
	localctx = NewDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, JSPNLParserRULE_declaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(60)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case JSPNLParserT__0, JSPNLParserT__1, JSPNLParserID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(57)
			p.Node_declaration()
		}

	case JSPNLParserT__2, JSPNLParserT__3, JSPNLParserT__4, JSPNLParserT__5:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(58)
			p.Arc_declaration()
		}

	case JSPNLParserT__7:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(59)
			p.Reward_declaration()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// INode_declarationContext is an interface to support dynamic dispatch.
type INode_declarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetNode returns the node token.
	GetNode() antlr.Token

	// GetId returns the id token.
	GetId() antlr.Token

	// SetNode sets the node token.
	SetNode(antlr.Token)

	// SetId sets the id token.
	SetId(antlr.Token)

	// IsNode_declarationContext differentiates from other interfaces.
	IsNode_declarationContext()
}

type Node_declarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	node   antlr.Token
	id     antlr.Token
}

func NewEmptyNode_declarationContext() *Node_declarationContext {
	var p = new(Node_declarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSPNLParserRULE_node_declaration
	return p
}

func (*Node_declarationContext) IsNode_declarationContext() {}

func NewNode_declarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Node_declarationContext {
	var p = new(Node_declarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSPNLParserRULE_node_declaration

	return p
}

func (s *Node_declarationContext) GetParser() antlr.Parser { return s.parser }

func (s *Node_declarationContext) GetNode() antlr.Token { return s.node }

func (s *Node_declarationContext) GetId() antlr.Token { return s.id }

func (s *Node_declarationContext) SetNode(v antlr.Token) { s.node = v }

func (s *Node_declarationContext) SetId(v antlr.Token) { s.id = v }

func (s *Node_declarationContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(JSPNLParserID)
}

func (s *Node_declarationContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(JSPNLParserID, i)
}

func (s *Node_declarationContext) Node_options() INode_optionsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INode_optionsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INode_optionsContext)
}

func (s *Node_declarationContext) Update_block() IUpdate_blockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUpdate_blockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUpdate_blockContext)
}

func (s *Node_declarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Node_declarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Node_declarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JSPNLListener); ok {
		listenerT.EnterNode_declaration(s)
	}
}

func (s *Node_declarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JSPNLListener); ok {
		listenerT.ExitNode_declaration(s)
	}
}

func (p *JSPNLParser) Node_declaration() (localctx INode_declarationContext) {
	localctx = NewNode_declarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, JSPNLParserRULE_node_declaration)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(83)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case JSPNLParserT__0:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(62)

			var _m = p.Match(JSPNLParserT__0)

			localctx.(*Node_declarationContext).node = _m
		}
		{
			p.SetState(63)

			var _m = p.Match(JSPNLParserID)

			localctx.(*Node_declarationContext).id = _m
		}
		p.SetState(65)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == JSPNLParserT__8 {
			{
				p.SetState(64)
				p.Node_options()
			}

		}

	case JSPNLParserT__1:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(67)

			var _m = p.Match(JSPNLParserT__1)

			localctx.(*Node_declarationContext).node = _m
		}
		{
			p.SetState(68)

			var _m = p.Match(JSPNLParserID)

			localctx.(*Node_declarationContext).id = _m
		}
		p.SetState(70)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == JSPNLParserT__8 {
			{
				p.SetState(69)
				p.Node_options()
			}

		}
		p.SetState(73)
		p.GetErrorHandler().Sync(p)

		if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext()) == 1 {
			{
				p.SetState(72)
				p.Update_block()
			}

		}

	case JSPNLParserID:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(75)

			var _m = p.Match(JSPNLParserID)

			localctx.(*Node_declarationContext).node = _m
		}
		{
			p.SetState(76)

			var _m = p.Match(JSPNLParserID)

			localctx.(*Node_declarationContext).id = _m
		}
		p.SetState(78)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == JSPNLParserT__8 {
			{
				p.SetState(77)
				p.Node_options()
			}

		}
		p.SetState(81)
		p.GetErrorHandler().Sync(p)

		if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 8, p.GetParserRuleContext()) == 1 {
			{
				p.SetState(80)
				p.Update_block()
			}

		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IArc_declarationContext is an interface to support dynamic dispatch.
type IArc_declarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetArctype returns the arctype token.
	GetArctype() antlr.Token

	// GetSrcName returns the srcName token.
	GetSrcName() antlr.Token

	// GetDestName returns the destName token.
	GetDestName() antlr.Token

	// SetArctype sets the arctype token.
	SetArctype(antlr.Token)

	// SetSrcName sets the srcName token.
	SetSrcName(antlr.Token)

	// SetDestName sets the destName token.
	SetDestName(antlr.Token)

	// IsArc_declarationContext differentiates from other interfaces.
	IsArc_declarationContext()
}

type Arc_declarationContext struct {
	*antlr.BaseParserRuleContext
	parser   antlr.Parser
	arctype  antlr.Token
	srcName  antlr.Token
	destName antlr.Token
}

func NewEmptyArc_declarationContext() *Arc_declarationContext {
	var p = new(Arc_declarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSPNLParserRULE_arc_declaration
	return p
}

func (*Arc_declarationContext) IsArc_declarationContext() {}

func NewArc_declarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Arc_declarationContext {
	var p = new(Arc_declarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSPNLParserRULE_arc_declaration

	return p
}

func (s *Arc_declarationContext) GetParser() antlr.Parser { return s.parser }

func (s *Arc_declarationContext) GetArctype() antlr.Token { return s.arctype }

func (s *Arc_declarationContext) GetSrcName() antlr.Token { return s.srcName }

func (s *Arc_declarationContext) GetDestName() antlr.Token { return s.destName }

func (s *Arc_declarationContext) SetArctype(v antlr.Token) { s.arctype = v }

func (s *Arc_declarationContext) SetSrcName(v antlr.Token) { s.srcName = v }

func (s *Arc_declarationContext) SetDestName(v antlr.Token) { s.destName = v }

func (s *Arc_declarationContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(JSPNLParserID)
}

func (s *Arc_declarationContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(JSPNLParserID, i)
}

func (s *Arc_declarationContext) Node_options() INode_optionsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INode_optionsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INode_optionsContext)
}

func (s *Arc_declarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Arc_declarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Arc_declarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JSPNLListener); ok {
		listenerT.EnterArc_declaration(s)
	}
}

func (s *Arc_declarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(JSPNLListener); ok {
		listenerT.ExitArc_declaration(s)
	}
}

func (p *JSPNLParser) Arc_declaration() (localctx IArc_declarationContext) {
	localctx = NewArc_declarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, JSPNLParserRULE_arc_declaration)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(85)

		var _lt = p.GetTokenStream().LT(1)

		localctx.(*Arc_declarationContext).arctype = _lt

		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<JSPNLParserT__2)|(1<<JSPNLParserT__3)|(1<<JSPNLParserT__4)|(1<<JSPNLParserT__5))) != 0) {
			var _ri = p.GetErrorHandler().RecoverInline(p)

			localctx.(*Arc_declarationContext).arctype = _ri
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(86)

		var _m = p.Match(JSPNLParserID)

		localctx.(*Arc_declarationContext).srcName = _m
	}
	{
		p.SetState(87)
		p.Match(JSPNLParserT__6)
	}
	{
		p.SetState(88)

		var _m = p.Match(JSPNLParserID)

		localctx.(*Arc_declarationContext).destName = _m
	}
	p.SetState(90)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == JSPNLParserT__8 {
		{
			p.SetState(89)
			p.Node_options()
		}

	}

	return localctx
}

// IReward_declarationContext is an interface to support dynamic dispatch.
type IReward_declarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetId returns the id token.
	GetId() antlr.Token

	// SetId sets the id token.
	SetId(antlr.Token)

	// IsReward_declarationContext differentiates from other interfaces.
	IsReward_declarationContext()
}

type Reward_declarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	id     antlr.Token
}

func NewEmptyReward_declarationContext() *Reward_declarationContext {
	var p = new(Reward_declarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = JSPNLParserRULE_reward_declaration
	return p
}

func (*Reward_declarationContext) IsReward_declarationContext() {}

func NewReward_declarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Reward_declarationContext {
	var p = new(Reward_declarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = JSPNLParserRULE_reward_declaration

	return p
}

func (s *Reward_declarationContext) GetParser() antlr.Parser { return s.parser }

func (s *Reward_declarationContext) GetId() antlr.Token { return s.id }

func (s *Reward_declarationContext) SetId(v antlr.Token) { s.id = v }

func (s *Reward_declarationContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}
